# northern-lights

./: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  Dockerfile  EDGE_GENERATION.md  GDS_SETUP.md  IMPLEMENTATION_SUMMARY.md  LLM_EDGE_DISCOVERY_PLAN.md  PORTFOLIO_INGESTION.md  README.md  pyproject.toml  requirements.txt  spec_sheet.md  test_investor_ab.py
app/: config.py  dependencies.py  main.py
app/db/: neo4j_client.py
app/db/queries/: __init__.py  company_queries.py  investor_queries.py  relationship_queries.py
app/models/: company.py  investor.py  relationship.py
app/routers/: chat.py  companies.py  relationships.py  search.py
app/services/: agent_service.py  company_data_extraction.py  graph_service.py  investor_discovery.py  portfolio_ingestion.py
app/services/prompts/: query_internet.xml  query_internet_funds.xml  structure_data.xml  structure_data_fund.xml
data_pipeline/: boglagsverket_api_test.ipynb  gemini_scraper_test.ipynb  scraper_test.ipynb  tavily_config.json
data_pipeline/illegal/: README.md  hack_net.py
deploy/: README.md  cloudbuild.yaml  cloudrun.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  DashboardHeader.tsx  DataTable.tsx  LandingGraph.tsx  LanguageToggle.tsx  NetworkGraph.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/src/contexts/: LanguageContext.tsx  SelectedEntityContext.tsx
frontend/src/hooks/: useBackendHealth.ts
frontend/src/lib/: api.ts  translations.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx
scripts/: delete_companies.cypher  delete_companies.py  fix_dual_labeled_funds.cypher
src/app/: __init__.py  config.py  dependencies.py  main.py
src/app/db/: neo4j_client.py
src/app/db/queries/: company_queries.py  investor_queries.py  relationship_queries.py
src/app/models/: __init__.py  company.py  investor.py  relationship.py
src/app/routers/: __init__.py  companies.py  investors.py  relationships.py  search.py
src/app/services/: graph_service.py
src/app/services/prompts/: query_get_id.xml  query_internet.xml  registry.yaml
tests/: conftest.py  test_companies.py  test_graph_service.py  test_health.py  test_investors.py  test_portfolio_ingestion.py  test_relationships.py  test_search.py
