[project]
name = "northern-lights"
version = "0.1.0"
description = "Northern Lights: Nordic Fund & Company Transparency Platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "fastapi>=0.123.9",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "neo4j>=6.0.3",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.1",
]
